[package]
name = "bittrade-websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1", features = ["full"] }
cliclack = "0.3.5"
thiserror = "2.0.11"
serde = { version="1.0.217", features = ["derive"] }
serde_json = "1.0.137"
bincode = "1.3.3"
futures = "0.3.31"
rust_decimal = "1.36.0"
