[package]
name = "bittrade-websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
cliclack = "0.3.5"
thiserror = "2.0.11"
serde = { version="1.0.217", features = ["derive"] }
serde_json = "1.0.137"
bincode = "1.3.3"
futures = "0.3.31"
rust_decimal = "1.36.0"
openssl = { version = "0.10", features = ["vendored"] }
env_logger = "0.11.6"
# console-subscriber = "0.1.5"
tracing = "0.1.41"
log = "0.4.25"
rust_decimal_macros = "1.36.0"
tempfile = "3.16.0"
tokio-util = "0.7.13"
tracing-subscriber = {version="0.3.19", features = ["env-filter", "json"]}
